Integrate blog functionality with multi-language support

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <a href="#process" data-i18n="navProcess">Process</a>
           <a href="#reviews" data-i18n="navReviews">Reviews</a>
           <a href="#contact" data-i18n="navContact">Contact</a>
+          <a href="/blog/" data-i18n="navBlog">Blog</a>
         </div>
 
         <div class="nav-actions">
@@ -252,6 +253,9 @@
         <a href="/terms.html?lang=en" data-i18n="footerTerms">Terms of Service</a>
       </div>
     </div>
+
+
+
   </footer>
 
   <script defer type="text/javascript" src="/main.js"></script>
