Integrate Google Analytics (gtag.js) across all HTML pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
   <link href='/style.css' rel='stylesheet'>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SY6ZZBS8G8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SY6ZZBS8G8');
+  </script>
 </head>
 
 <body>
@@ -253,6 +263,7 @@
         <a href="/terms.html?lang=en" data-i18n="footerTerms">Terms of Service</a>
       </div>
     </div>
+
 
 
 
